[package]
name = "mux-stream"
version = "0.1.2"
authors = ["Temirkhan Myrzamadi <hirrolot@gmail.com>"]
edition = "2018"
repository = "https://github.com/Hirrolot/mux-stream"
homepage = "https://github.com/Hirrolot/mux-stream"
description = "Asynchronous hierarchical update dispatching for Rust"
license = "MIT"
categories = ["asynchronous", "rust-patterns"]
keywords = ["async", "futures", "tokio", "multiplex", "demultiplex"]
exclude = ["media"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
logging = ["log"]

[dependencies]
mux-stream-macros = "0.3.1"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "sync", "stream", "macros"] }
futures = "0.3"
log = { version = "0.4", optional = true }
paste = "1.0"

[dev-dependencies]
derive_more = "0.99"

[package.metadata."docs.rs"]
all-features = true
